2004-01-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/style.cpp (sp_style_read_pfloat, SPS_READ_IFLOAT_IF_UNSET, 
	SPS_READ_PFLOAT_IF_UNSET): Remove these unused functions/macros.

2004-01-28  MenTaLguY  <mental@rydia.net>

	* src/toolbox.cpp: aux toolbar now expands properly when torn off
	(fix for bug #874923)

	* src/libnr/nr-svp.cpp, src/libnr/nr-stroke.cpp,
	  src/libnr/nr-svp-private.h, src/libnr/nr-svp.h,
	  src/libnr/nr-svp-render.cpp, src/libnr/nr-svp-uncross.cpp:

	  NRCoord -> NR::Coord

	* src/interface.cpp: removed Filters menu

2004-01-28  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/seltrans.cpp: Various cleanups, including addressing some
	warnings, and doing some more NR::Point'ification.

	* src/knot.h, src/knot.cpp (sp_knot_set_position): Change from
	pass-by-value to pass-by-const-reference.

	* src/geom.cpp (sp_intersector_line_intersection): Restore
	  definition of previous local `cross' function, but "inline" the
	  dot(rot90(a), b) definition.  This makes the definition conform to
	  the documentation.
	* src/desktop-snap.cpp (sp_intersector_a_vector_snap): Undo a recent
	  change that adapted to the previously-introduced bug in
	  sp_intersector_line_intersection.

	* icons/Makefile.am: s/icons_dir/iconsdir/g for automake.
	* src/dialogs/Makefile.am, src/widgets/Makefile.am:
	  s/icons_dir/iconsdir/g for consistency with icons/Makefile.am.

2004-01-27  jon phillips <jon@users.sourceforge.net>

        * Makefile.am: changed 'glade' globally to 'icons'

        * Makefile.mingw: changed 'glade' globally to 'icons'

        * config.h.mingw: changed 'INKSCAPE_GLADEDIR' to 'INKSCAPE_ICONS_DIR'

        * configure.in: changed 'glade' globally to 'icons'
        
        * Makefile.am: changed 'gladedir' to 'icons_dir', and fixed spacing, 
          changed 'glad_DATA' to 'icons_DATA'

        * glade/about_svg.tmpl: changed 'glade' globally to 'icons'

        * po/pl.po: changed 'glade' globally to 'icons'
